Closed
Bug 694769
Opened 14 years ago
Closed 14 years ago
Remove nsIScriptContext::GetScriptGlobal in favour of GetGlobalJSObject
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: Ms2ger, Assigned: Ms2ger)
References
Details
Attachments
(1 file, 1 obsolete file)
|
14.72 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
No description provided.
Attachment #567285 -
Flags: review?(peterv)
Flags: in-testsuite-
| Assignee | ||
Comment 1•14 years ago
|
||
Missed a debug-only one.
Attachment #567285 -
Attachment is obsolete: true
Attachment #567285 -
Flags: review?(peterv)
Attachment #567334 -
Flags: review?(peterv)
Comment 2•14 years ago
|
||
Comment on attachment 567334 [details] [diff] [review]
Patch v1.1
>+++ b/content/xul/document/src/nsXULDocument.cpp
>@@ -3625,24 +3625,18 @@ nsXULDocument::ExecuteScript(nsIScriptCo
> {
> NS_PRECONDITION(aScriptObject != nsnull && aContext != nsnull, "null ptr");
> if (! aScriptObject || ! aContext)
> return NS_ERROR_NULL_POINTER;
>
> NS_ENSURE_TRUE(mScriptGlobalObject, NS_ERROR_NOT_INITIALIZED);
>
> // Execute the precompiled script with the given version
>- nsresult rv;
>- void *global = mScriptGlobalObject->GetScriptGlobal(
>- aContext->GetScriptTypeID());
>- rv = aContext->ExecuteScript(aScriptObject,
>- global,
>- nsnull, nsnull);
>-
>- return rv;
>+ JSObject* global = mScriptGlobalObject->GetGlobalJSObject();
>+ return aContext->ExecuteScript(aScriptObject, global, nsnull, nsnull);
Could you add an assertion which checks that aContext->GetScriptTypeID() is JS
Attachment #567334 -
Flags: review?(peterv) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•